src/test/ui/specialization/issue-38091-2.stderr
warning: the feature `specialization` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/issue-38091-2.rs:1:12
   |
LL | #![feature(specialization)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #31844 <https://github.com/rust-lang/rust/issues/31844> for more information

error[E0275]: overflow evaluating the requirement `{integer}: Check`
  --> $DIR/issue-38091-2.rs:21:5
   |
LL |     fn iterate(self);
   |     ----------------- required by `Iterate::iterate`
...
LL |     Iterate::iterate(0);
   |     ^^^^^^^^^^^^^^^^
   |
   = note: required because of the requirements on the impl of `Iterate<'_>` for `{integer}`

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0275`.
